Completed work. Updated readme.

--- a/package.json
+++ b/package.json
@@ -4,6 +4,21 @@
   "description": "Simple context-menu component built for Vue.",
   "author": "John Datserakis <johndatserakis@gmail.com>",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/johndatserakis/vue-simple-context-menu.git"
+  },
+  "bugs": {
+    "url": "https://github.com/johndatserakis/vue-simple-context-menu/issues"
+  },
+  "keywords": [
+    "vue",
+    "simple",
+    "context",
+    "menu",
+    "right",
+    "click"
+  ],
   "main": "dist/vue-simple-context-menu.umd.js",
   "module": "dist/vue-simple-context-menu.esm.js",
   "unpkg": "dist/vue-simple-context-menu.min.js",
@@ -11,34 +26,38 @@
     "./sfc": "src/vue-simple-context-menu.vue"
   },
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
-    "watch": "vue serve ./src/vue-simple-context-menu.vue",
-    "build": "npm run build:unpkg & npm run build:es & npm run build:umd",
+    "watch": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
+    "watch:vue-cli": "vue serve ./src/vue-simple-context-menu.vue",
+    "build": "rm -rf ./dist npm run build:unpkg & npm run build:es & npm run build:umd",
     "build:umd": "rollup --config build/rollup.config.js --format umd --file dist/vue-simple-context-menu.umd.js",
     "build:es": "rollup --config build/rollup.config.js --format es --file dist/vue-simple-context-menu.esm.js",
     "build:unpkg": "rollup --config build/rollup.config.js --format iife --file dist/vue-simple-context-menu.min.js",
-    "build:example": "rm -rf ./dist && cross-env NODE_ENV=production webpack --progress --hide-modules"
+    "build:example": "rm -rf ./docs && cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
-  "dependencies": {},
+  "dependencies": {
+    "v-click-outside": "^1.0.4"
+  },
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.0",
     "babel-preset-stage-3": "^6.24.1",
+    "cross-env": "^5.1.6",
+    "css-loader": "^0.28.7",
+    "file-loader": "^1.1.4",
     "minimist": "^1.2.0",
+    "node-sass": "^4.5.3",
     "rollup": "^0.57.1",
     "rollup-plugin-buble": "^0.19.2",
+    "rollup-plugin-node-resolve": "^3.3.0",
     "rollup-plugin-uglify-es": "0.0.1",
     "rollup-plugin-vue": "^3.0.0",
+    "sass-loader": "^7.0.1",
     "vue": "^2.5.16",
+    "vue-loader": "^13.0.5",
     "vue-template-compiler": "^2.5.16",
     "webpack": "^3.6.0",
     "webpack-dev-server": "^2.9.1",
-    "css-loader": "^0.28.7",
-    "file-loader": "^1.1.4",
-    "node-sass": "^4.5.3",
-    "sass-loader": "^7.0.1",
-    "vue-loader": "^13.0.5",
-    "cross-env": "^5.1.6"
+    "html-webpack-plugin": "^3.2.0"
   }
 }
