Update dependencies and migrate config, fix some code, rebuild library

--- a/package.json
+++ b/package.json
@@ -26,45 +26,46 @@
     "./sfc": "src/vue-simple-context-menu.vue"
   },
   "scripts": {
-    "watch": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
+    "watch": "cross-env NODE_ENV=development webpack-dev-server --mode development --open --hot",
     "watch:vue-cli": "vue serve ./src/vue-simple-context-menu.vue",
     "build": "rm -rf ./dist npm run build:unpkg & npm run build:es & npm run build:umd & npm run build:unpkg",
     "build:umd": "rollup --config build/rollup.config.js --format umd --file dist/vue-simple-context-menu.umd.js",
     "build:es": "rollup --config build/rollup.config.js --format es --file dist/vue-simple-context-menu.esm.js",
     "build:unpkg": "rollup --config build/rollup.config.js --format iife --file dist/vue-simple-context-menu.min.js",
-    "build:example": "rm -rf ./docs && cross-env NODE_ENV=production webpack --progress --hide-modules",
+    "build:example": "rm -rf ./docs && cross-env NODE_ENV=production webpack --mode production --progress --hide-modules",
     "test": "jest"
   },
   "dependencies": {
-    "v-click-outside": "^1.0.4"
+    "v-click-outside": "^2.0.2"
   },
   "devDependencies": {
-    "@vue/test-utils": "^1.0.0-beta.25",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-preset-env": "^1.6.0",
-    "babel-preset-stage-3": "^6.24.1",
-    "cross-env": "^5.1.6",
-    "css-loader": "^0.28.7",
-    "file-loader": "^1.1.4",
-    "minimist": "^1.2.0",
-    "node-sass": "^4.5.3",
-    "rollup": "^0.57.1",
-    "rollup-plugin-buble": "^0.19.2",
-    "rollup-plugin-node-resolve": "^3.3.0",
-    "rollup-plugin-uglify-es": "0.0.1",
-    "rollup-plugin-vue": "^4.3.0",
-    "rollup-plugin-css-only": "^0.4.0",
-    "sass-loader": "^7.0.1",
-    "vue": "^2.5.16",
-    "vue-loader": "^13.0.5",
-    "vue-template-compiler": "^2.5.16",
-    "webpack": "^3.6.0",
-    "webpack-dev-server": "^2.9.1",
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.2.3",
+    "@vue/test-utils": "^1.0.0-beta.28",
+    "babel-loader": "^8.0.4",
+    "cross-env": "^5.2.0",
+    "css-loader": "^2.1.0",
+    "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^23.6.0",
     "jest-serializer-vue": "^2.0.2",
-    "vue-jest": "^2.6.0"
+    "minimist": "^1.2.0",
+    "node-sass": "^4.11.0",
+    "rollup": "^1.0.0",
+    "rollup-plugin-buble": "^0.19.6",
+    "rollup-plugin-css-only": "^0.4.0",
+    "rollup-plugin-node-resolve": "^4.0.0",
+    "rollup-plugin-terser": "^4.0.0",
+    "rollup-plugin-vue": "^4.3.2",
+    "sass-loader": "^7.1.0",
+    "uglifyjs-webpack-plugin": "^2.1.1",
+    "vue": "^2.5.21",
+    "vue-jest": "^3.0.2",
+    "vue-loader": "^15.4.2",
+    "vue-template-compiler": "^2.5.21",
+    "webpack": "^4.28.3",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.14"
   },
   "jest": {
     "moduleFileExtensions": [
