--- a/.babelrc
+++ b/.babelrc
@@ -1,12 +1,9 @@
 {
-    "presets": [
-        ["env", { "modules": false }],
-        "stage-3"
-    ],
+    "presets": [["@babel/env", { "modules": false }]],
     "env": {
         "test": {
             "presets": [
-                ["env", { "targets": { "node": "current" }}]
+                ["@babel/env", { "targets": { "node": "current" }}]
             ]
         }
     }
