--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-simple-context-menu",
-  "version": "3.0.0",
+  "version": "3.0.1",
   "description": "Simple context-menu component built for Vue. Works well with both left and right clicks. Nothing too fancy, just works and is simple to use.",
   "author": "John Datserakis <johndatserakis@gmail.com>",
   "license": "MIT",
@@ -39,9 +39,12 @@
     "v-click-outside": "^2.0.2"
   },
   "devDependencies": {
+    "@babel/cli": "^7.2.3",
     "@babel/core": "^7.2.2",
     "@babel/preset-env": "^7.2.3",
     "@vue/test-utils": "^1.0.0-beta.28",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.4",
     "cross-env": "^5.2.0",
     "css-loader": "^2.1.0",
@@ -51,6 +54,7 @@
     "jest-serializer-vue": "^2.0.2",
     "minimist": "^1.2.0",
     "node-sass": "^4.11.0",
+    "regenerator-runtime": "^0.13.1",
     "rollup": "^1.0.0",
     "rollup-plugin-buble": "^0.19.6",
     "rollup-plugin-css-only": "^0.4.0",
