--- a/package.json
+++ b/package.json
@@ -41,34 +41,35 @@
   "devDependencies": {
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.2.2",
-    "@babel/preset-env": "^7.2.3",
+    "@babel/preset-env": "^7.3.1",
     "@vue/test-utils": "^1.0.0-beta.28",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
-    "babel-loader": "^8.0.4",
+    "babel-loader": "^8.0.5",
     "cross-env": "^5.2.0",
     "css-loader": "^2.1.0",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
-    "jest": "^23.6.0",
+    "jest": "^24.0.0",
     "jest-serializer-vue": "^2.0.2",
     "minimist": "^1.2.0",
     "node-sass": "^4.11.0",
     "regenerator-runtime": "^0.13.1",
-    "rollup": "^1.0.0",
+    "rollup": "^1.1.2",
     "rollup-plugin-buble": "^0.19.6",
-    "rollup-plugin-css-only": "^0.4.0",
+    "rollup-plugin-commonjs": "^9.2.0",
+    "rollup-plugin-css-only": "^1.0.0",
     "rollup-plugin-node-resolve": "^4.0.0",
-    "rollup-plugin-terser": "^4.0.0",
-    "rollup-plugin-vue": "^4.3.2",
+    "rollup-plugin-terser": "^4.0.3",
+    "rollup-plugin-vue": "^4.6.2",
     "sass-loader": "^7.1.0",
     "uglifyjs-webpack-plugin": "^2.1.1",
-    "vue": "^2.5.21",
+    "vue": "^2.5.22",
     "vue-jest": "^3.0.2",
-    "vue-loader": "^15.4.2",
-    "vue-template-compiler": "^2.5.21",
-    "webpack": "^4.28.3",
-    "webpack-cli": "^3.1.2",
+    "vue-loader": "^15.6.2",
+    "vue-template-compiler": "^2.5.22",
+    "webpack": "^4.29.0",
+    "webpack-cli": "^3.2.1",
     "webpack-dev-server": "^3.1.14"
   },
   "jest": {
