--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-simple-context-menu",
-  "version": "3.1.3",
+  "version": "3.1.4",
   "description": "Simple context-menu component built for Vue. Works well with both left and right clicks. Nothing too fancy, just works and is simple to use.",
   "author": "John Datserakis <johndatserakis@gmail.com>",
   "license": "MIT",
@@ -26,13 +26,13 @@
     "./sfc": "src/vue-simple-context-menu.vue"
   },
   "scripts": {
-    "watch": "cross-env NODE_ENV=development webpack-dev-server --mode development --open --hot",
-    "watch:vue-cli": "vue serve ./src/vue-simple-context-menu.vue",
-    "build": "rm -rf ./dist npm run build:unpkg & npm run build:es & npm run build:umd & npm run build:unpkg",
+    "watch": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
+    "build": "npm run test && npm run build:example && npm run build:library",
     "build:umd": "rollup --config build/rollup.config.js --format umd --file dist/vue-simple-context-menu.umd.js",
     "build:es": "rollup --config build/rollup.config.js --format es --file dist/vue-simple-context-menu.esm.js",
     "build:unpkg": "rollup --config build/rollup.config.js --format iife --file dist/vue-simple-context-menu.min.js",
-    "build:example": "rm -rf ./docs && cross-env NODE_ENV=production webpack --mode production --progress --hide-modules",
+    "build:library": "rm -rf ./dist npm run build:unpkg & npm run build:es & npm run build:umd & npm run build:unpkg",
+    "build:example": "rm -rf ./docs && cross-env NODE_ENV=production webpack --progress --hide-modules",
     "test": "jest"
   },
   "dependencies": {
