--- a/package.json
+++ b/package.json
@@ -31,46 +31,46 @@
     "build:umd": "rollup --config build/rollup.config.js --format umd --file dist/vue-simple-context-menu.umd.js",
     "build:es": "rollup --config build/rollup.config.js --format es --file dist/vue-simple-context-menu.esm.js",
     "build:unpkg": "rollup --config build/rollup.config.js --format iife --file dist/vue-simple-context-menu.min.js",
-    "build:library": "rm -rf ./dist npm run build:unpkg & npm run build:es & npm run build:umd & npm run build:unpkg",
-    "build:example": "rm -rf ./docs && cross-env NODE_ENV=production webpack --progress --hide-modules",
+    "build:library": "rm -rf ./dist npm run build:umd & npm run build:es & npm run build:umd & npm run build:unpkg",
+    "build:example": "rm -rf ./docs && cross-env NODE_ENV=production webpack --progress --hide-modules --mode production",
     "test": "jest"
   },
   "dependencies": {
-    "v-click-outside": "^2.0.2"
+    "v-click-outside": "^2.1.3"
   },
   "devDependencies": {
-    "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.2.2",
-    "@babel/preset-env": "^7.3.1",
-    "@vue/test-utils": "^1.0.0-beta.28",
+    "@babel/cli": "^7.4.4",
+    "@babel/core": "^7.4.5",
+    "@babel/preset-env": "^7.4.5",
+    "@vue/test-utils": "^1.0.0-beta.29",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-jest": "^23.6.0",
-    "babel-loader": "^8.0.5",
+    "babel-jest": "^24.8.0",
+    "babel-loader": "^8.0.6",
     "cross-env": "^5.2.0",
-    "css-loader": "^2.1.0",
-    "file-loader": "^3.0.1",
+    "css-loader": "^3.0.0",
+    "file-loader": "^4.0.0",
     "html-webpack-plugin": "^3.2.0",
-    "jest": "^24.0.0",
+    "jest": "^24.8.0",
     "jest-serializer-vue": "^2.0.2",
     "minimist": "^1.2.0",
-    "node-sass": "^4.11.0",
-    "regenerator-runtime": "^0.13.1",
-    "rollup": "^1.1.2",
+    "node-sass": "^4.12.0",
+    "regenerator-runtime": "^0.13.2",
+    "rollup": "^1.15.6",
     "rollup-plugin-buble": "^0.19.6",
-    "rollup-plugin-commonjs": "^9.2.0",
+    "rollup-plugin-commonjs": "^10.0.0",
     "rollup-plugin-css-only": "^1.0.0",
-    "rollup-plugin-node-resolve": "^4.0.0",
-    "rollup-plugin-terser": "^4.0.3",
-    "rollup-plugin-vue": "^4.6.2",
+    "rollup-plugin-node-resolve": "^5.0.3",
+    "rollup-plugin-terser": "^5.0.0",
+    "rollup-plugin-vue": "^5.0.0",
     "sass-loader": "^7.1.0",
-    "uglifyjs-webpack-plugin": "^2.1.1",
-    "vue": "^2.5.22",
-    "vue-jest": "^3.0.2",
-    "vue-loader": "^15.6.2",
-    "vue-template-compiler": "^2.5.22",
-    "webpack": "^4.29.0",
-    "webpack-cli": "^3.2.1",
-    "webpack-dev-server": "^3.1.14"
+    "terser-webpack-plugin": "^1.3.0",
+    "vue": "^2.6.10",
+    "vue-jest": "^3.0.4",
+    "vue-loader": "^15.7.0",
+    "vue-template-compiler": "^2.6.10",
+    "webpack": "^4.34.0",
+    "webpack-cli": "^3.3.4",
+    "webpack-dev-server": "^3.7.2"
   },
   "jest": {
     "moduleFileExtensions": [
