--- a/.babelrc
+++ b/.babelrc
@@ -1,12 +1,24 @@
 {
-    "presets": [
-        ["@babel/preset-env", { "modules": false }]
-    ],
-    "env": {
-        "test": {
-            "presets": [
-                ["@babel/preset-env", { "targets": { "node": "current" }}]
-            ]
-        }
+  "presets": [
+    [
+      "@babel/preset-env",
+      {
+        "modules": false
+      }
+    ]
+  ],
+  "env": {
+    "test": {
+      "presets": [
+        [
+          "@babel/preset-env",
+          {
+            "targets": {
+              "node": "current"
+            }
+          }
+        ]
+      ]
     }
+  }
 }
