--- a/package.json
+++ b/package.json
@@ -53,7 +53,6 @@
     "jest": "^24.8.0",
     "jest-serializer-vue": "^2.0.2",
     "minimist": "^1.2.0",
-    "node-sass": "^4.12.0",
     "regenerator-runtime": "^0.13.2",
     "rimraf": "^3.0.2",
     "rollup": "^1.15.6",
@@ -63,6 +62,7 @@
     "rollup-plugin-node-resolve": "^5.0.3",
     "rollup-plugin-terser": "^5.0.0",
     "rollup-plugin-vue": "^5.0.0",
+    "sass": "^1.49.9",
     "sass-loader": "^7.1.0",
     "terser-webpack-plugin": "^1.3.0",
     "vue": "^2.6.10",
