--- a/package.json
+++ b/package.json
@@ -36,13 +36,14 @@
     "test": "jest"
   },
   "dependencies": {
-    "v-click-outside": "^2.1.3"
+    "click-outside-vue3": "^4.0.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.4",
     "@babel/core": "^7.4.5",
     "@babel/preset-env": "^7.4.5",
-    "@vue/test-utils": "^1.0.0-beta.29",
+    "@vue/compiler-sfc": "^3.2.31",
+    "@vue/test-utils": "^2.0.0-rc.18",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^24.8.0",
     "babel-loader": "^8.0.6",
@@ -65,10 +66,9 @@
     "sass": "^1.49.9",
     "sass-loader": "^7.1.0",
     "terser-webpack-plugin": "^1.3.0",
-    "vue": "^2.6.10",
-    "vue-jest": "^3.0.4",
-    "vue-loader": "^15.7.0",
-    "vue-template-compiler": "^2.6.10",
+    "vue": "^3.2.31",
+    "vue-jest": "^5.0.0-alpha.10",
+    "vue-loader": "^17.0.0",
     "webpack": "^4.34.0",
     "webpack-cli": "^3.3.4",
     "webpack-dev-server": "^3.7.2"
