--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "test": "jest"
   },
   "dependencies": {
-    "click-outside-vue3": "^4.0.1"
+    "click-outside-vue3": "^4.0.1",
+    "rollup-plugin-scss": "^3.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.4",
@@ -59,10 +60,9 @@
     "rollup": "^1.15.6",
     "rollup-plugin-buble": "^0.19.6",
     "rollup-plugin-commonjs": "^10.0.0",
-    "rollup-plugin-css-only": "^1.0.0",
     "rollup-plugin-node-resolve": "^5.0.3",
     "rollup-plugin-terser": "^5.0.0",
-    "rollup-plugin-vue": "^5.0.0",
+    "rollup-plugin-vue": "^6.0.0",
     "sass": "^1.49.9",
     "sass-loader": "^7.1.0",
     "terser-webpack-plugin": "^1.3.0",
