--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.8.0",
     "jest-serializer-vue": "^2.0.2",
+    "mini-css-extract-plugin": "^0.11.2",
     "minimist": "^1.2.0",
     "regenerator-runtime": "^0.13.2",
     "rimraf": "^3.0.2",
