--- a/package.json
+++ b/package.json
@@ -1,44 +1,16 @@
 {
-  "name": "vue-simple-context-menu",
-  "version": "3.4.2",
-  "description": "Simple context-menu component built for Vue. Works well with both left and right clicks. Nothing too fancy, just works and is simple to use.",
   "author": "John Datserakis <johndatserakis@gmail.com>",
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/johndatserakis/vue-simple-context-menu.git"
-  },
-  "bugs": {
-    "url": "https://github.com/johndatserakis/vue-simple-context-menu/issues"
-  },
-  "keywords": [
-    "vue",
-    "simple",
-    "context",
-    "menu",
-    "right",
-    "click"
-  ],
-  "main": "dist/vue-simple-context-menu.umd.js",
-  "module": "dist/vue-simple-context-menu.esm.js",
-  "unpkg": "dist/vue-simple-context-menu.min.js",
   "browser": {
     "./sfc": "src/vue-simple-context-menu.vue"
   },
-  "scripts": {
-    "watch": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
-    "build": "npm run test && npm run build:example && npm run build:library",
-    "build:umd": "rollup --config build/rollup.config.js --format umd --file dist/vue-simple-context-menu.umd.js",
-    "build:es": "rollup --config build/rollup.config.js --format es --file dist/vue-simple-context-menu.esm.js",
-    "build:unpkg": "rollup --config build/rollup.config.js --format iife --file dist/vue-simple-context-menu.min.js",
-    "build:library": "rimraf dist npm run build:umd & npm run build:es & npm run build:umd & npm run build:unpkg",
-    "build:example": "rimraf docs && cross-env NODE_ENV=production webpack --progress --hide-modules --mode production",
-    "test": "jest"
+  "bugs": {
+    "url": "https://github.com/johndatserakis/vue-simple-context-menu/issues"
   },
   "dependencies": {
     "click-outside-vue3": "^4.0.1",
     "rollup-plugin-scss": "^3.0.0"
   },
+  "description": "Simple context-menu component built for Vue. Works well with both left and right clicks. Nothing too fancy, just works and is simple to use.",
   "devDependencies": {
     "@babel/cli": "^7.4.4",
     "@babel/core": "^7.4.5",
@@ -82,12 +54,43 @@
     "moduleNameMapper": {
       "^@/(.*)$": "<rootDir>/src/$1"
     },
-    "transform": {
-      "^.+\\.js$": "<rootDir>/node_modules/babel-jest",
-      ".*\\.(vue)$": "<rootDir>/node_modules/vue-jest"
-    },
     "snapshotSerializers": [
       "<rootDir>/node_modules/jest-serializer-vue"
-    ]
-  }
+    ],
+    "transform": {
+      ".*\\.(vue)$": "<rootDir>/node_modules/vue-jest",
+      "^.+\\.js$": "<rootDir>/node_modules/babel-jest"
+    }
+  },
+  "keywords": [
+    "vue",
+    "simple",
+    "context",
+    "menu",
+    "right",
+    "click"
+  ],
+  "license": "MIT",
+  "main": "dist/vue-simple-context-menu.umd.js",
+  "module": "dist/vue-simple-context-menu.esm.js",
+  "name": "vue-simple-context-menu",
+  "peerDependencies": {
+    "vue": "^3.2.31"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/johndatserakis/vue-simple-context-menu.git"
+  },
+  "scripts": {
+    "build": "npm run test && npm run build:example && npm run build:library",
+    "build:es": "rollup --config rollup.config.js --format es --file dist/vue-simple-context-menu.esm.js",
+    "build:example": "rimraf docs && cross-env NODE_ENV=production webpack --progress --hide-modules --mode production",
+    "build:library": "rimraf dist npm run build:umd & npm run build:es & npm run build:umd & npm run build:unpkg",
+    "build:umd": "rollup --config rollup.config.js --format umd --file dist/vue-simple-context-menu.umd.js",
+    "build:unpkg": "rollup --config rollup.config.js --format iife --file dist/vue-simple-context-menu.min.js",
+    "test": "jest",
+    "watch": "cross-env NODE_ENV=development webpack-dev-server --open --hot"
+  },
+  "unpkg": "dist/vue-simple-context-menu.min.js",
+  "version": "4.0.0"
 }
