--- a/package.json
+++ b/package.json
@@ -89,8 +89,9 @@
     "build:umd": "rollup --config rollup.config.js --format umd --file dist/vue-simple-context-menu.umd.js",
     "build:unpkg": "rollup --config rollup.config.js --format iife --file dist/vue-simple-context-menu.min.js",
     "test": "jest",
-    "watch": "cross-env NODE_ENV=development webpack-dev-server --open --hot"
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot"
   },
+  "sideEffects": false,
   "unpkg": "dist/vue-simple-context-menu.min.js",
-  "version": "4.0.0"
+  "version": "4.0.1"
 }
