--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "url": "https://github.com/johndatserakis/vue-simple-context-menu/issues"
   },
   "dependencies": {
-    "click-outside-vue3": "^4.0.1",
-    "rollup-plugin-scss": "^3.0.0"
+    "click-outside-vue3": "^4.0.1"
   },
   "description": "Simple context-menu component built for Vue. Works well with both left and right clicks. Nothing too fancy, just works and is simple to use.",
   "devDependencies": {
@@ -33,6 +32,7 @@
     "rollup": "^1.15.6",
     "rollup-plugin-buble": "^0.19.6",
     "rollup-plugin-commonjs": "^10.0.0",
+    "rollup-plugin-scss": "^3.0.0",
     "rollup-plugin-node-resolve": "^5.0.3",
     "rollup-plugin-terser": "^5.0.0",
     "rollup-plugin-vue": "^6.0.0",
@@ -93,5 +93,5 @@
   },
   "sideEffects": false,
   "unpkg": "dist/vue-simple-context-menu.min.js",
-  "version": "4.0.1"
+  "version": "4.0.2"
 }
