--- a/package.json
+++ b/package.json
@@ -14,18 +14,13 @@
     "@babel/cli": "^7.4.4",
     "@babel/core": "^7.4.5",
     "@babel/preset-env": "^7.4.5",
+    "@vitejs/plugin-vue": "^2.3.3",
     "@vue/compiler-sfc": "^3.2.31",
     "@vue/test-utils": "^2.0.0-rc.18",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^24.8.0",
-    "babel-loader": "^8.0.6",
-    "cross-env": "^5.2.0",
-    "css-loader": "^3.0.0",
-    "file-loader": "^4.0.0",
-    "html-webpack-plugin": "^3.2.0",
     "jest": "^24.8.0",
     "jest-serializer-vue": "^2.0.2",
-    "mini-css-extract-plugin": "^0.11.2",
     "minimist": "^1.2.0",
     "regenerator-runtime": "^0.13.2",
     "rimraf": "^3.0.2",
@@ -37,14 +32,9 @@
     "rollup-plugin-terser": "^5.0.0",
     "rollup-plugin-vue": "^6.0.0",
     "sass": "^1.49.9",
-    "sass-loader": "^7.1.0",
-    "terser-webpack-plugin": "^1.3.0",
+    "vite": "^2.9.9",
     "vue": "^3.2.31",
-    "vue-jest": "^5.0.0-alpha.10",
-    "vue-loader": "^17.0.0",
-    "webpack": "^4.34.0",
-    "webpack-cli": "^3.3.4",
-    "webpack-dev-server": "^3.7.2"
+    "vue-jest": "^5.0.0-alpha.10"
   },
   "jest": {
     "moduleFileExtensions": [
@@ -84,14 +74,14 @@
   "scripts": {
     "build": "npm run test && npm run build:example && npm run build:library",
     "build:es": "rollup --config rollup.config.js --format es --file dist/vue-simple-context-menu.esm.js",
-    "build:example": "rimraf docs && cross-env NODE_ENV=production webpack --progress --hide-modules --mode production",
+    "build:example": "rimraf docs && vite build",
     "build:library": "rimraf dist && npm run build:umd & npm run build:es & npm run build:umd & npm run build:unpkg",
     "build:umd": "rollup --config rollup.config.js --format umd --file dist/vue-simple-context-menu.umd.js",
     "build:unpkg": "rollup --config rollup.config.js --format iife --file dist/vue-simple-context-menu.min.js",
     "test": "jest",
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot"
+    "dev": "vite"
   },
   "sideEffects": false,
   "unpkg": "dist/vue-simple-context-menu.min.js",
-  "version": "4.0.3"
+  "version": "4.0.4"
 }
