--- a/package.json
+++ b/package.json
@@ -81,7 +81,9 @@
     "test": "jest",
     "dev": "vite"
   },
-  "sideEffects": false,
+  "sideEffects": [
+    "*.css"
+  ],
   "unpkg": "dist/vue-simple-context-menu.min.js",
-  "version": "4.0.4"
+  "version": "4.1.0"
 }
